--- a/04-results.Rmd
+++ b/04-results.Rmd
@@ -159,7 +159,7 @@ knitr::include_graphics('output/plots/sankey_plot.png')
 
 Vu le point de controverse sur les antiandrogènes, j'ai souhaité comparer les valeurs de laboratoire des patient·e·s en fonction du traitement qu'iels prenaient. La figure \@ref(fig:OutcomePlotF) propose une représentation graphique de l'évolution de l'axe hypothalamo-hypophyso-gonadique (HHG) tandis que le tableau \@ref(tab:OutcomeTableF) présente les médianes des valeurs tensionnelles et des paramètres de laboratoire mesurés au fil des consultations. Pour le graphique, les valeurs de T2 d'un·e patient·e ont été exclues de l'analyse en raison d'un oubli de prise de traitement de sa part, ce qui donnait une image erronée de l'évolution, vu le faible échantillon. En outre, deux patient·e·s ont raté leur rendez-vous trimestriel, l'une à T1 et l'autre à T2. En raison de la petitesse de l'échantillon, les valeurs présentées doivent être prises avec prudence.
 
-La figure \@ref(fig:OutcomePlotF) se divise en quatre panneaux représentant quatre angles différents de l'axe HHG, eux-mêmes divisés en trois graphiques, selon l'antiandrogène. Pour chaque panneau, on retrouve les valeurs individuelles de T~s~ sous formes de points, avec un code couleur selon qu'elles correspondent ou non aux valeurs-cibles. Travaillant majoritairement avec le laboratoire de la Citadelle, j'ai choisi leur cutoff de 2,29nmol/L pour la T~s~ maximale chez les femmes cisgenres. Les barres représentent la valeur médiane du paramètre considéré (T~s~, pour les panneaux A à C et LH pour le panneau D). Enfin, la droite de régression montre l'évolution générale des paramètres. Le panneau A montre l'évolution de la T~s~ au fil du temps. On peut constater, à la platitude des droites de régression ainsi qu'à la dispersion des valeurs individuelles que le temps ne semble pas influencer l'équilibre hormonal. Autrement dit, l'équilibre semble atteint rapidement, dès T1, et se maintenir. On notera une T~s~ médiane anormalement élevée à T2, pour le traitement par E2 seul, vraisemblablement liée aux données manquantes à chez deux patient·e·s à ce moment. D'autres soucis de compliance thérapeutique ne sont pas à exclure, vu l'E2~s~ plus faible également (voir tableau \@ref(tab:OutcomeTableF)). De plus, si la Spironolactone ne semble pas contribuer à abaisser la T~s~ de manière plus marquée que l'E2 seul, le Depo-Eligard est le seul traitement pour lequel toutes les valeurs de T~s~ sont sous le cutoff. À noter que les patient·e·s sous Spironolactone présentaient des valeurs médianes d'E2s plus faibles que les autres patient·e·s. Mon hypothèse actuelle réside en une application suboptimale du gel chez deux des trois patient·e·s mais ne pourra être confirmée d'ici la publication de ce TFE. Les graphiques du panneau B suggèrent une indépendance entre l'E2~s~ et la T~s~, ce qui est surprenant. Pour creuser davantage cette relation, le panneau C montre le lien entre T~s~ et LH tandis que le panneau D, entre LH et E2~s~. Pris ensemble, ces deux panneaux permettent de mieux comprendre les liens entre E2~s~et T~s~. En effet, la T~s~ est clairement influencée par la concentration sérique de LH, avec une valeur-seuil à partir de laquelle la production de T n'est plus inhibée. La supériorité du Depo-Eligard peut alors se comprendre par son action directe sur la LH et les valeurs continuellement inférieures au seuil de LH. La Spironolactone, de son côté, ne semble pas influer sur les concentrations en LH. En outre, la LH diminue tandis que l'E2~s~ augmente, mais les valeurs cibles de 100-200ng/L recommandées dans la littérature semblent insuffisantes pour passer sous le seuil, pour la majorité des patient·e·s. Le lien entre T~s~ et E2~s~ étant donc indirect et passant par l'inhibition de la LH, les concentrations seules d'E2~s~ ne permettent pas, dans cet échantillon limité, de prédire la T~s~ tout en l'influençant néanmoins. Vu la petitesse des échantillons par traitement et par consultation, des tests statistiques pour évaluer l'évolution des paramètres ne seraient pas informatifs.
+La figure \@ref(fig:OutcomePlotF) se divise en quatre panneaux représentant quatre angles différents de l'axe HHG, eux-mêmes divisés en trois graphiques, selon l'antiandrogène. Pour chaque panneau, on retrouve les valeurs individuelles de T~s~ sous formes de points, avec un code couleur selon qu'elles correspondent ou non aux valeurs-cibles. Travaillant majoritairement avec le laboratoire de la Citadelle, j'ai choisi leur cutoff de 2,29nmol/L pour la T~s~ maximale chez les femmes cisgenres. Les barres représentent la valeur médiane du paramètre considéré (T~s~, pour les panneaux A à C et LH pour le panneau D). Enfin, la droite de régression montre l'évolution générale des paramètres. Le panneau A montre l'évolution de la T~s~ au fil du temps. On peut constater, à la platitude des droites de régression ainsi qu'à la dispersion des valeurs individuelles que le temps ne semble pas influencer l'équilibre hormonal. Autrement dit, l'équilibre semble atteint rapidement, dès T1, et se maintenir. On notera une T~s~ médiane anormalement élevée à T2, pour le traitement par E2 seul, vraisemblablement liée aux données manquantes chez deux patient·e·s à ce moment. D'autres soucis de compliance thérapeutique ne sont pas à exclure, vu l'E2~s~ plus faible également (voir tableau \@ref(tab:OutcomeTableF)). De plus, si la Spironolactone ne semble pas contribuer à abaisser la T~s~ de manière plus marquée que l'E2 seul, le Depo-Eligard est le seul traitement pour lequel toutes les valeurs de T~s~ sont sous le cutoff. À noter que les patient·e·s sous Spironolactone présentaient des valeurs médianes d'E2s plus faibles que les autres patient·e·s. Mon hypothèse actuelle réside en une application suboptimale du gel chez deux des trois patient·e·s mais ne pourra être confirmée d'ici la publication de ce TFE. Les graphiques du panneau B suggèrent une indépendance entre l'E2~s~ et la T~s~, ce qui est surprenant. Pour creuser davantage cette relation, le panneau C montre le lien entre T~s~ et LH tandis que le panneau D, entre LH et E2~s~. Pris ensemble, ces deux panneaux permettent de mieux comprendre les liens entre E2~s~et T~s~. En effet, la T~s~ est clairement influencée par la concentration sérique de LH, avec une valeur-seuil à partir de laquelle la production de T n'est plus inhibée. La supériorité du Depo-Eligard peut alors se comprendre par son action directe sur la LH et les valeurs continuellement inférieures au seuil de LH. La Spironolactone, de son côté, ne semble pas influer sur les concentrations en LH. En outre, la LH diminue tandis que l'E2~s~ augmente, mais les valeurs cibles de 100-200ng/L recommandées dans la littérature semblent insuffisantes pour passer sous le seuil, pour la majorité des patient·e·s. Le lien entre T~s~ et E2~s~ étant donc indirect et passant par l'inhibition de la LH, les concentrations seules d'E2~s~ ne permettent pas, dans cet échantillon limité, de prédire la T~s~ tout en l'influençant néanmoins.
 
 ```{r OutcomePlotF, echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', fig.cap="Évolution de l'axe hypothalamo-hypophyso-gonadique chez les patient·e·s transféminin·e·s", fig.dim=c(10,11), out.width = '100%', eval = knitr::is_html_output()}
 
