--- a/references.bib
+++ b/references.bib
@@ -681,3 +681,18 @@
   keywords = {A lire,Fertility,Hormone therapy,Monitoring,Researcher App,Transgender men,Transgender people},
   file = {C\:\\Users\\maxen\\Zotero\\storage\\F2PHBFYC\\6355169.html},
 }
+
+@article{kotamarti2021,
+	title = {Risk for Venous Thromboembolism in Transgender Patients Undergoing Cross-Sex Hormone Treatment: A Systematic Review},
+	author = {Kotamarti, Vasanth S. and Greige, Nicolas and Heiman, Adee J. and Patel, Ashit and Ricci, Joseph A.},
+	year = {2021},
+	month = {07},
+	date = {2021-07},
+	journal = {The Journal of Sexual Medicine},
+	pages = {1280--1291},
+	volume = {18},
+	number = {7},
+	doi = {10.1016/j.jsxm.2021.04.006},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S174360952100429X},
+	langid = {en}
+}
